--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
   color: #fff; }
 
 ::selection {
-  background: #000;
+  background: #d31515;
   color: #fff; }
 
 a {
@@ -21,13 +21,16 @@ a {
     text-decoration: none; }
 
 .text-black {
-  color: #000; }
+  color: #000; 
+  
+}
+  
 
 .site-wrap:before {
   -webkit-transition: .3s all ease-in-out;
   -o-transition: .3s all ease-in-out;
   transition: .3s all ease-in-out;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(34, 10, 100, 0.6);
   content: "";
   position: absolute;
   z-index: 2000;
